# dotfiles2

./: .zshrc  Makefile  source.md
ai/: AIWR_SPEC.md  pyproject.toml
ai/ccstatusline/: settings.json
ai/ccstatusline/plugins/: 001-ccusage-day.10s.sh  002-ccusage-month.10s.sh  003-input-session.10s.sh  004-session=limits.10s.sh
ai/claude/: mcp-init
ai/claude/mcp-servers/: brave-search.json  bright-data.json  chrome-devtools.json  context7.json  exa.json  playwright.json  reddit.json  sequential-thinking.json  shadcn-ui.json  tavily.json
ai/src/aiwr/: __init__.py  cli.py  logger.py  models.py  resume.py  runner.py  session.py  tree.py
ai/src/aiwr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ai/src/aiwr/agents/: __init__.py  base.py  claude.py  codex.py  gemini.py  opencode.py
astro_vim4/: lazy-lock.json
astro_vim4/lua/: community.lua  lazy_setup.lua
astro_vim4/lua/plugins/: claudecode.lua  claudecode_off.lua  telescope_smart.lua  treesitter.lua  user.lua
astro_vim4/lua/user/: telescope_smart_search.lua
files/: claude_desktop_config.json  codex_config.toml  karabiner.json  tmux.conf
files/ccstatusline/: settings.json
ghostty/: config
lazyvim/: lazy-lock.json  lazyvim.json
lazyvim/lua/config/: keymaps.lua
nvim/: [packer]  init.lua
nvim/lua/: conditions.lua  mappings.lua  plugins.lua  settings.lua
nvim/plugin/: packer_compiled.lua
scripts/claude/: notification-script.applescript  notification-script.sh  settings.json  statusline-command.sh  stop-notification.applescript  stop-script.sh
tools/wtr/: wtr_spec.md
(+64 files in other folders)
